# universe

./: .gitattributes  .gitignore  README.md  cache-priv-key.pem  cache-pub-key.pem  flake.nix
flake/: actions.nix  args.nix  files.nix  formatting.nix  readme.nix  secrets.nix  users.nix
modules/: adguard-home.nix  agenix.nix  agents.nix  alacritty.nix  alloy.nix  amule.nix  android.nix  arbi.nix  arr.nix  atticd.nix  atuin.nix  base.nix  bluetooth.nix  clan-test.nix  claude-code.nix  cloudflare-dyndns.nix  development.nix  dms-shell.nix  docker.nix  email.nix  facter.nix  fail2ban.nix  firefox.nix  fonts.nix  foodlog.nix  foot.nix  forgejo.nix  garage.nix  garmin-grafana.nix  gemini-cli.nix  git-fetch.nix  git-sync.nix  git.nix  google-chrome.nix  gpg.nix  grafana.nix  greetd.nix  helix.nix  home-assistant.nix  home-manager.nix  (+48 more)
npins/: default.nix
projects/aoc/2025/: .envrc  aoc-2025.cabal  project.nix
projects/aoc/2025/src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
projects/aoc/2025/test/: Spec.hs
projects/blog/generator/: Fields.hs  Main.hs  blog.cabal
projects/blog/generator/css/: custom.scss  fonts.scss  lightbox.scss  math.scss  mobile.scss  navigation.scss  typography.scss  videos.scss
projects/blog/generator/js/: custom.js
projects/blog/generator/templates/: archive.html  default.html  home.html  post.html  tag.html
secrets/: amule_password.age  arbi_environment_file.age  attic_sisko_token.age  atticd_environment_file.age  autistici_password.age  caltrack_url.age  claude_proxy_token.age  cloudflare-api-tokens.age  cloudflare_api_tokens.age  cloudflare_dyndns_api_token.age  firefox_sync_secrets.age  foodlog_environment_file.age  forgejo-runners-registration-token.age  forgejo_runners_registration_token.age  garage_environment.age  gptcommit__openai__api_key.age  grafana_admin_password.age  grafana_secret_key.age  hetzner-storage-box-ssh-password.age  hetzner_storage_box_ssh_password.age  home-assistant-api-token.age  home-assistant-planimetry.age  home-assistant-ssh-key.age  home_assistant_api_token.age  home_assistant_planimetry.age  home_assistant_ssh_key.age  kanidm_admin_password.age  nix_netrc.age  nixos_password_ccr.age  openrouter_api_key.age  sisko_restic_password.age  (+10 more)
(+159 files in other folders)
