cabal-version:      3.0
name:               blog-generator

-- The package version.  See the Haskell package versioning policy (PVP)
-- for standards guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:      +-+------- breaking API changes
--                   | | +----- non-breaking API additions
--                   | | | +--- code changes with no API change
-- version:          0.1.1.0

version:            0.1.0.0
license:            GPL-3.0-or-later
license-file:       LICENSE
maintainer:         andrea.ciceri@autistici.org
author:             Andrea Ciceri

executable generator
    main-is: Main.hs
    other-modules:
        Fields

    default-language: Haskell2010
    other-extensions:
        OverloadedStrings
        GADTs

    build-depends:
        base >= 4.16 && < 5,
        data-default >= 0.7 && < 1,
        filepath >= 1.4 && < 2,
        process >= 1.6 && < 2,
        time >= 1.11 && < 2,
        time-locale-compat >= 0.1 && < 1,
        hakyll >= 4.15.1 && < 5,
        hakyll-images >= 1.2 && < 2,
        text >= 2.0 && < 3,
        hakyll-sass >= 0.2 && < 1,
        hsass >= 0.8 && < 1,
        pandoc >= 2.17 && < 4,
        pandoc-types >= 1.22 && < 2,
        blaze-html >= 0.9 && < 1,
        blaze-markup >= 0.8 && < 1,
        megaparsec >= 9.2 && < 10,
        replace-megaparsec >= 1.4 && < 2
